{
  "version": 4,
  "terraform_version": "1.9.0",
  "serial": 81,
  "lineage": "3eb39961-58ea-d05f-5c3b-5408399512a3",
  "resources": [
    {
      "module": "module.cores_database_aurorasv2",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "rds_this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:133775794121:security-group/sg-0146bf0cc9503c3fa",
            "description": "nlobby-staging-aurora-sv2-test-ao-security-group-01",
            "egress": [],
            "id": "sg-0146bf0cc9503c3fa",
            "ingress": [],
            "name": "nlobby-staging-aurora-sv2-test-ao-security-group-01",
            "name_prefix": "",
            "owner_id": "133775794121",
            "revoke_rules_on_delete": false,
            "tags": {
              "Createdby": "Terraform",
              "Environment": "staging",
              "Name": "nlobby-staging-aurora-sv2-test-ao-security-group-01"
            },
            "tags_all": {
              "Createdby": "Terraform",
              "Environment": "staging",
              "Name": "nlobby-staging-aurora-sv2-test-ao-security-group-01"
            },
            "timeouts": null,
            "vpc_id": "vpc-0399aeaa966313c22"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.terraform_remote_state.stg_cores_network"
          ]
        }
      ]
    },
    {
      "module": "module.cores_database_aurorasv2",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "ingress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "172.35.3.0/25",
              "172.35.3.128/25",
              "172.35.4.0/25"
            ],
            "description": null,
            "from_port": 5432,
            "id": "sgrule-2742699030",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0146bf0cc9503c3fa",
            "security_group_rule_id": "",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 5432,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.terraform_remote_state.stg_cores_network",
            "module.cores_database_aurorasv2.aws_security_group.rds_this"
          ]
        }
      ]
    }
  ]
}